[gd_scene load_steps=9 format=2]

[ext_resource path="res://Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://Actors/MainCamera.gd" type="Script" id=2]
[ext_resource path="res://Autoload/PlayerData.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/audio/comfort.mp3" type="AudioStream" id=4]
[ext_resource path="res://Assets/audio/noncomfort.mp3" type="AudioStream" id=5]
[ext_resource path="res://Assets/player.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17.5, 15 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16.25, 13 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="PlayerData" parent="." instance=ExtResource( 3 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, -14 )
scale = Vector2( 0.22549, 0.252526 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -15 )
shape = SubResource( 3 )

[node name="MainCamera" type="Camera2D" parent="."]
current = true
limit_left = -10000
limit_top = -10000
limit_right = 10000
limit_bottom = 10000
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 20.0
script = ExtResource( 2 )

[node name="ShakeTimer" type="Timer" parent="MainCamera"]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.25, -15 )
shape = SubResource( 4 )

[node name="ComfortMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="NonComfortMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -80.0
autoplay = true

[connection signal="stomped" from="." to="MainCamera" method="_on_Player_stomped"]
[connection signal="timeout" from="MainCamera/ShakeTimer" to="MainCamera" method="_on_ShakeTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
